# ad-adas

.github/workflows/: arcanum-ci.yml  arcanum-docker-ci.yml
arcanum/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
arcanum/.devcontainer/: Dockerfile  Dockerfile.ci  devcontainer.json  init.sh  post-create.sh
arcanum/cmake/: Doxyfile.in  Doxygen.cmake  FindMLIR.cmake  Warnings.cmake
arcanum/docs/: DoxygenStyle.md  ECSL.md  arcanum-future-considerations.md  arcanum-milestones.md  arcanum-mvp-cpp-subset.md  arcanum-mvp-plan.md  arcanum-roadmap.md  arcanum-syntax-tracker.xlsx  ecsl-cpp-design.md  ecsl-parser-design.md
arcanum/ecsl/: CMakeLists.txt
arcanum/ecsl/IR/: CMakeLists.txt  ECSLDialect.cpp  ECSLDialect.h  ECSLDialect.td  ECSLOps.cpp  ECSLOps.h  ECSLOps.td
arcanum/parser/: CMakeLists.txt  ECSLParser.cpp  ECSLParser.h
arcanum/scripts/: check-include-guards.sh
arcanum/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
arcanum/test/ecsl/: CMakeLists.txt  RegisterDialect.cpp  ecsl-body-ops-invalid.mlir  ecsl-body-ops.mlir  ecsl-contract-ops.mlir
arcanum/test/parser/: CMakeLists.txt  ECSLParserTest.cpp
arcanum/test/testgen/: CMakeLists.txt  RegisterDialect.cpp
arcanum/test/tools/: CMakeLists.txt  arith-scf-roundtrip.mlir
arcanum/testgen/: CMakeLists.txt
arcanum/testgen/IR/: CMakeLists.txt  TestGenDialect.cpp  TestGenDialect.h  TestGenDialect.td  TestGenOps.cpp  TestGenOps.h  TestGenOps.td
arcanum/tools/: CMakeLists.txt  arcanum-opt.cpp
arcanum/verify/: CMakeLists.txt
