# test/ - Test Infrastructure
#
# Subdirectories:
#   examples/  - Example input files (future)
#   ecsl/      - ECSL dialect unit tests
#   testgen/   - TestGen dialect unit tests
#   tools/     - CLI tool smoke tests
#   verify/    - Verification pass tests (future)
#   e2e/       - End-to-end integration tests (future)

add_subdirectory(ecsl)
add_subdirectory(testgen)
add_subdirectory(tools)
